force-app/main/default/objects/Cruelty_Report_Agency_Role__c/Cruelty_Report_Agency_Role__c.object-meta.xml
<CustomObject>
    <label>Cruelty Report Agency Role</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>CR Agency Role Name #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cruelty Report Agency Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>