force-app/main/default/objects/Cruelty_Report_Agency_Role__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cruelty Report Agency Roles</relationshipLabel>
    <relationshipName>Cruelty_Report_Agency_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>