force-app/main/default/objects/Cruelty_Report_Agency_Role__c/fields/Agency_Role_Notes__c.field-meta.xml
<CustomField>
    <fullName>Agency_Role_Notes__c</fullName>
    <label>Agency Role Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>