force-app/main/default/objects/Cruelty_Report_Agency_Role__c/fields/Cruelty_Report__c.field-meta.xml
<CustomField>
    <fullName>Cruelty_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cruelty Report</label>
    <referenceTo>Action_Item__c</referenceTo>
    <relationshipLabel>Cruelty Report Agency Roles</relationshipLabel>
    <relationshipName>Cruelty_Report_Agency_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>