force-app/main/default/objects/Cruelty_Report_Agency_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal Care</fullName>
            </value>
            <value>
                <fullName>Code Enforcement</fullName>
            </value>
            <value>
                <fullName>Complaining Agency</fullName>
            </value>
            <value>
                <fullName>Defendant</fullName>
            </value>
            <value>
                <fullName>Hired Investigator</fullName>
            </value>
            <value>
                <fullName>Law Enforcement</fullName>
            </value>
            <value>
                <fullName>Petitioner</fullName>
            </value>
            <value>
                <fullName>Placement Partner</fullName>
            </value>
            <value>
                <fullName>Plaintiff</fullName>
            </value>
            <value>
                <fullName>Rescue Group</fullName>
            </value>
            <value>
                <fullName>Respondent</fullName>
            </value>
            <value>
                <fullName>Subject Agency</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>