force-app/main/default/objects/Cruelty_Report_Agency_Role__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <formula>Agency__r.Website</formula>
    <label>Website</label>
    <type>Text</type>
</CustomField>